# dubdeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __DOCS_PLACEHOLDER__AGENT-BACKUP-SPEC.md  __DOCS_PLACEHOLDER__DOCKER-SNAPSHOT-SPEC.md  __DOCS_PLACEHOLDER__INSTALL-BAREMETAL.md  __DOCS_PLACEHOLDER__N1H-THEME-SPEC.md  __DOCS_PLACEHOLDER__PROVIDER-REFERENCE.md  __DOCS_PLACEHOLDER__PROVIDER-REFERENCE.yaml  __DOCS_PLACEHOLDER__PROXMOX-PROVIDER-SPEC.md  __DOCS_PLACEHOLDER__RANCHER-PROVIDER-SPEC.md  __DOCS_PLACEHOLDER__XCP-NG-PROVIDER-SPEC.md  compose.yaml  config.example.yaml  deploy.sh  renovate.json
backend/: demo_config.yaml  demo_server.py  pyproject.toml
backend/app/: auth.py  config.py  db.py  httpclient.py  main.py  opslog.py  settings.py
backend/app/providers/: __init__.py  base.py  compose.py  docker.py  hyperv.py  libvirt.py  parallels.py  proxmox.py  registry.py  virtualbox.py  xcpng.py
backend/app/services/: __init__.py  ops.py  stats.py  status.py
backend/app/transports/: __init__.py  base.py  fake.py  local.py  ssh.py
backend/tests/: conftest.py  proxmox_fakes.py  test_api.py  test_auth.py  test_config.py  test_egress.py  test_hyperv.py  test_modules.py  test_ops.py  test_providers.py  test_providers_phase5.py  test_proxmox.py  test_settings.py  test_stats.py  test_status.py  test_transports.py  test_virtualbox.py
backend/tests/contract/: test_provider_contract.py
backend/tests/fixtures/: config.yaml  docker_compose_ls.txt  docker_ps.txt  dubdeck_vm_disks.txt  hyperv_get_vm.json  (+11 more)
(+70 files in other folders)
